--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/style.css" rel="stylesheet">
-    <title></title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link href="./style.css" rel="stylesheet" />
+    <title>Gustavo</title>
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png" />
+    <link rel="manifest" href="./img/site.webmanifest" />
   </head>
   <body>
-  
+    <h1 data-value="INCOMING">INCOMING</h1>
+
+      <a id="source-link" class="meta-link" href="https://www.youtube.com/watch?v=W5oawMJaXbU" target="_blank">
+        <i class="fa-solid fa-link"></i>
+        <span>Thanks to Hyperplexed</span>
+      </a>
+    <script src="./script.js">
+    </script>
   </body>
 </html>
