--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="./img/site.webmanifest" />
   </head>
   <body>
-    <h1 data-value="INCOMING">INCOMING</h1>
+    <h1 data-value="INCOMING" class="text_move">INCOMING</h1>
 
       <a id="source-link" class="meta-link" href="https://www.youtube.com/watch?v=W5oawMJaXbU" target="_blank">
         <i class="fa-solid fa-link"></i>
